--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -4,8 +4,8 @@
 controller:
   name: controller
   image:
-    repository: quay.io/kubernetes-ingress-controller/nginx-ingress-controller
-    tag: "0.26.1"
+    repository: carehubdevregistry.azurecr.io/nginx-ingress-controller
+    tag: "0.25.1"
     pullPolicy: IfNotPresent
     # www-data -> uid 33
     runAsUser: 33
